--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.1.1",
-    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.14",
     "@tsconfig/svelte": "^5.0.4",
+    "phosphor-svelte": "^3.0.1",
     "svelte": "^5.38.1",
     "svelte-check": "^4.3.1",
     "tailwindcss": "^4.1.16",
@@ -21,7 +21,6 @@
     "vite": "^7.1.2"
   },
   "dependencies": {
-    "bits-ui": "^2.14.2",
-    "phosphor-svelte": "^3.0.1"
+    "bits-ui": "^2.14.2"
   }
 }
